--- a/.gitignore
+++ b/.gitignore
@@ -61,6 +61,24 @@ local_settings.py
 db.sqlite3
 db.sqlite3-journal
 
+# Django static files
+staticfiles/
+staticroot/
+
+# Django media files (uploaded by users)
+media/
+
+# Django logs directory
+logs/
+*.log
+
+# Django migrations (opcional - algunos proyectos los incluyen, otros no)
+# migrations/
+
+# Local settings files
+settings_local.py
+*_local.py
+
 # Flask stuff:
 instance/
 .webassets-cache
@@ -172,3 +190,56 @@ cython_debug/
 
 # PyPI configuration file
 .pypirc
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
+
+# Operating System files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# IDE files
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# Backup files
+*.bak
+*.backup
+*.orig
+
+# Temporary files
+*.tmp
+*.temp
+
+# Production secrets
+.env.production
+.env.local
+.env.staging
+
+# Database dumps
+*.sql
+*.dump
+
+# Compressed files
+*.zip
+*.tar.gz
+*.rar
+
+# Node.js (if using frontend tooling)
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Docker volumes
+docker-volumes/
