fix: Configuración completa de Amazon SES y limpieza del proyecto

--- a/env.example
+++ b/env.example
@@ -9,4 +9,11 @@ DATABASE_URL=postgresql://username:password@host:5432/database_name
 # Configuración de PostgreSQL (para docker-compose)
 POSTGRES_DB=your_database_name
 POSTGRES_USER=your_username
-POSTGRES_PASSWORD=your_password 
+POSTGRES_PASSWORD=your_password
+
+# Configuración de Amazon SES para correos
+AWS_ACCESS_KEY_ID=your_aws_access_key_id
+AWS_SECRET_ACCESS_KEY=your_aws_secret_access_key
+AWS_SES_REGION=us-east-1
+DEFAULT_FROM_EMAIL=noreply@tudominio.com
+AWS_SES_CONFIGURATION_SET=
