add style to the notifications

--- a/env.example
+++ b/env.example
@@ -11,6 +11,11 @@ POSTGRES_DB=your_database_name
 POSTGRES_USER=your_username
 POSTGRES_PASSWORD=your_password
 
+# Puertos para docker-compose
+POSTGRES_PORT=5432
+WEB_PORT=8000
+REDIS_PORT=6379
+
 # Configuración de Amazon SES para correos
 AWS_ACCESS_KEY_ID=your_aws_access_key_id
 AWS_SECRET_ACCESS_KEY=your_aws_secret_access_key
